# wildcat-api-python

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  api_maker.ipynb  demo_notebook.ipynb  example2.csv  pyproject.toml  pytest.ini  readme.md  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: python-package.yml
.ipynb_checkpoints/: demo_notebookOld-checkpoint.ipynb
docs/: conf.py  index.rst
docs/buildDocs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/buildDocs/.doctrees/: environment.pickle  index.doctree
docs/buildDocs/_modules/: index.html
docs/buildDocs/_sources/: index.rst.txt
docs/buildDocs/notebooks/: api_maker.html  api_maker.ipynb  demo_notebook.html
docs/notebooks/: demo_notebook.ipynb  example_api_maker.ipynb
docs/source/: api_calls.rst  code.rst  denos.rst  dev.rst  install.rst  installation.rst  introduction.rst  tutorial.rst  usage.rst  user.rst
notebooks/: demo_notebook.py
notebooks/dev/: example_api_maker.py
tests/: conftest.py  test_data_cleaner.py
wildcatpy/: api_calls.py  test.py  wclogging.py
wildcatpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wildcatpy/extractors/: all_layers.json  concept_count.json  groups.json  groups_extractor.json  hierarchy_extractor.json  layer_details.json  layer_features.json  observation_extractor.json  observations.json  track_extractor.json
wildcatpy/src/: __init__.py  cleaner.py  data_cleaner.py  data_extractor.py  helper_functions.py
(+42 files in other folders)
